update html, css

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                 <div class="promo__img promo__img-left">
                     <img src="/img/promo_img_left.png" alt="Facial_care">
                     <div class="promo__img-info">
-                        <span>Уход для лица</span>
-                        <a href="#" class="promo__img-btn"><svg width="27" height="14" viewBox="0 0 27 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- <span>Уход для лица</span> -->
+                        <a class="promo__img-title" href="#">Уход для лица</a>
+                        <a class="promo__img-btn" href="#"><svg width="27" height="14" viewBox="0 0 27 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 7H26M26 7L19.697 1M26 7L19.697 13" stroke="#122947"/>
                         </svg>
                         </a>
@@ -61,13 +62,15 @@
                     <h1 class="promo__title">MAROON</h1>
                     <p class="promo__text">Натуральная косметика
                         для бережного ухода за кожей</p>
-                    <button class="promo__btn">Подробнее</button>
+                        <a class="btn" href="#">Подробнее</a>
+                    <!-- <button class="promo__btn">Подробнее</button> -->
                 </div>
                 <div class="promo__img promo__img-right">
                     <img src="/img/promo_img_right.png" alt="Facial_care">
                     <div class="promo__img-info">
-                        <span>Уход для тела</span>
-                        <a href="#" class="promo__img-btn"><svg width="27" height="14" viewBox="0 0 27 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- <span>Уход для тела</span> -->
+                        <a class="promo__img-title" href="#">Уход для тела</a>
+                        <a class="promo__img-btn" href="#"><svg width="27" height="14" viewBox="0 0 27 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 7H26M26 7L19.697 1M26 7L19.697 13" stroke="#122947"/>
                         </svg>
                         </a>
@@ -82,7 +85,7 @@
                     <div class="bestsellers__content">
                         <h3 class="bestsellers__title">Бестселлеры</h3>
                         <p class="bestsellers__text">Легендарные продукты, завоевавшие любовь наших клиентов</p>
-                        <a class="bestsellers__btn" href="#">Смотреть все</a>
+                        <a class="btn bestsellers__btn" href="#">Смотреть все</a>
                     </div>
                     <div class="bestsellers__bestproducts">
                         <ul class="bestproducts__list">
@@ -113,7 +116,7 @@
                             </li>
                         </ul>
                     </div>
-                <a class="bestsellers__btn bestsellers__btn-none" href="#">Смотреть все</a>
+                <a class="btn bestsellers__btn-none" href="#">Смотреть все</a>
                 </div>
                 <div class="bestsellers__btns">
                     <a href="#" class="bestsellers__arrow">
@@ -135,7 +138,7 @@
                 <div class="promo2__content">
                     <h3 class="promo2__title">Встречайте весну вместе с нами</h3>
                     <p class="promo2__text">Попробуйте новую коллекцию ухаживающих средств для лица с SPF защитой</p>
-                    <a class="promo2__btn" href="#">Подробнее</a>
+                    <a class="btn" href="#">Подробнее</a>
                 </div>
             </div>
         </section>
@@ -146,7 +149,7 @@
                     <h3 class="promo3__title">Индивидуальный уход</h3>
                     <p class="promo3__text">Не всегда очевидно, какие элементы и минералы необходимы коже, а многочисленные эксперименты с разными средствами только ухудшают ее качество.</p>
                     <p class="promo3__text">Заполните анкету, и мы подберем уход, подходящий именно вам, учитывая ваш образ жизни, место жительства и другие факторы.</p>
-                    <button class="promo3__btn">Заполнить анкету</button>
+                    <button class="btn btn-promo3">Заполнить анкету</button>
                 </div>
                 <div class="promo3__image">
                 </div>
@@ -156,7 +159,7 @@
         <section class="about">
             <div class="container">
                 <h3 class="about__title">“Мы стремимся сделать уход за кожей доступным и приятным ритуалом для всех, кто хочет заботиться о себе и своем теле”</h3>
-                <a class="about__btn" href="#">Наша история</a>
+                <a class="btn" href="#">Наша история</a>
             </div>
         </section>
 
@@ -173,7 +176,7 @@
                 <div class="subscription__content">
                     <h3 class="subscription__title">Присоединяйтесь к нам</h3>
                     <p class="subscription__text">Подпишитесь на наш аккаунт @marooncare и узнавайте о новиках и акциях первыми</p>
-                    <button class="subscription__btn">Подписаться</button>
+                    <button class="btn btn-subscription">Подписаться</button>
                 </div>
             </div>
         </section>
